examples/test/testpolicy4628.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4628
  namespace: namespace443
spec:
  podSelector:
    matchLabels:
      key27: value18
      key32: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value46
      podSelector:
        matchLabels:
          key49: value21
          key6: value39
